examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/deref_memory.st
language core;
extend with #references, #type-ascriptions;

fn main(n : Nat) -> Nat {
	return *(<0x01> as &Bool)
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
